# StickyMd

./: .gitignore  README.md  index.html  package-lock.json  package.json  stdin  tsconfig.json  vite.config.ts
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/: markdown.ts  storage.ts
